--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <div>
                  <footer class="footer">
                      
-                     <img src="assets/img/portfolio/render7.jpg" width="50" height="50">
+                     <img src="/assets/img/IKUS.jpg" width="50" height="50">
                      <p>Arquitectos especializados en Visualización Arquitectónica.</p>
                     </footer>
                 </div>
