--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                  <footer class="footer">
                      
                      <img src="/assets/img/IKUS.jpg" width="50" height="50">
-                     <p>Arquitectos especializados en Visualización Arquitectónica.</p>
+                     <p>rquitectos especializados en Visualización Arquitectónica.</p>
                     </footer>
                 </div>
                 
