--- a/index.html
+++ b/index.html
@@ -297,9 +297,8 @@
 
               <!--LOGO FINAL-->  
               <div>
-                 <footer class="footer">
-                     
-                     <img src="/assets/img/IKUS.jpg" width="50" height="50">
+                 <footer class="footer">                     
+                     <img src="assets/img/IKUS.jpg" width="50" height="50">
                      <p>rquitectos especializados en Visualización Arquitectónica.</p>
                     </footer>
                 </div>
